fixed navbar collapse

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,8 @@ body {
   position: fixed !important;
   top: 0;
   width: 100%;
-  height: 70px;
-  z-index: 1030; /* Ensure it stays above other content */
+  height: 80px;
+  z-index: 1030;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .custom-navbar a {
@@ -24,6 +24,13 @@ body {
   transition: font-weight 0.3s;
 }
 
+.navbar-collapse {
+  background-color: #7cfbdf;
+  justify-content: center;
+  width: 100%;
+  padding: 15px;
+  border-radius: 15px;
+}
 .custom-navbar a:hover,
 .custom-navbar a:focus,
 .custom-navbar a:active {
